# Tracecode

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: claude.wrapper.sh  install.sh
tests/: conftest.py  test_db.py  test_detection.py  test_git.py  test_git_analysis.py  test_guard.py  test_paths.py  test_persistence.py  test_scoring.py  test_session.py  test_summary.py  test_watcher.py
tracecode/: checkpoint.py  cli.py  config.py  db.py  doctor.py  guard.py  models.py
tracecode/analysis/: paths.py  persistence.py  scoring.py  tests.py
tracecode/api/: main.py  routes.py  schemas.py
tracecode/capture/: git.py  session.py  watcher.py
tracecode/output/: summary.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/sessions/: page.tsx
ui/src/components/: DiffViewer.tsx  FileTouchTable.tsx  OutcomeSignalChecklist.tsx  QualityBadge.tsx  ScoreRow.tsx  VerdictBadge.tsx
ui/src/lib/: api.ts  format.ts
