[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracecode"
version = "0.1.0"
description = "Watches every Claude Code session and tells you what to trust, review, or look at first"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.scripts]
# After `pip install -e .` or `uv sync`, this makes `tracecode` available on PATH
tracecode = "tracecode.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# uv-specific alias for the dev group (used when running `uv sync`)
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests that start real OS processes (deselect with -m 'not slow')",
]
